# temp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: MainWindow.h
resources/: resources.qrc
src/: MainWindow.cpp  main.cpp
translations/: temp_zh_CN.ts
ui/: MainWindow.ui
